syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.angrycyz.grpc";

message PaxosMsg {
    int64 pId = 1;
    int64 serverId = 2;
    string msg = 3;
    string action = 4;
}